API seperation