@@ -4,6 +4,7 @@
     <modules>
         <module>api</module>
         <module>core</module>
+        <module>test</module>
     </modules>
 
     <parent>
@@ -13,8 +14,9 @@
     </parent>
 
     <groupId>com.atlassian.jira</groupId>
-    <artifactId>jira-rest-java-client</artifactId>
-    <version>${jrjc.version}</version>
+    <artifactId>jira-rest-java-client-parent</artifactId>
+    <version>2.0.0-m3-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <organization>
         <name>Atlassian Pty Ltd</name>
@@ -25,7 +27,6 @@
     <description>
         Java library which allows to easily talk to any JIRA 5.0+ instance.
     </description>
-    <packaging>pom</packaging>
 
     <issueManagement>
         <system>JIRA</system>
@@ -54,10 +55,6 @@
     </scm>
 
     <properties>
-        <jrjc.api.version>2.0</jrjc.api.version>
-        <jrjc.minor.version>0-m3-SNAPSHOT</jrjc.minor.version>
-        <jrjc.version>${jrjc.api.version}.${jrjc.minor.version}</jrjc.version>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jira.version>5.0</jira.version>
         <jira.data.version>${jira.version}</jira.data.version>
@@ -85,131 +82,4 @@
         </plugins>
     </reporting>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.atlassian.maven.plugins</groupId>
-                <artifactId>maven-jira-plugin</artifactId>
-                <version>3.11</version>
-                <configuration>
-                    <productVersion>${jira.version}</productVersion>
-                    <productDataVersion>${jira.data.version}</productDataVersion>
-                    <jvmArgs>-Xmx1024m -XX:MaxPermSize=512m</jvmArgs>
-                    <!--<restVersion>4.2-SNAPSHOT</restVersion>-->
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.4.3</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <excludes>
-                        <exclude>it/**</exclude>
-                        <exclude>it2/**</exclude>
-                    </excludes>
-                    <forkMode>once</forkMode>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <preparationGoals>clean test</preparationGoals>
-                    <releaseProfiles>releaseProfile</releaseProfiles>
-                    <!--allowTimestampedSnapshots>true</allowTimestampedSnapshots-->
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>1.3.1</version>
-                <configuration>
-                    <properties>
-                        <property>
-                            <name>jira.version</name>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>com.atlassian.jira</groupId>
-                                    <artifactId>jira-core</artifactId>
-                                </dependency>
-                            </dependencies>
-                        </property>
-                    </properties>
-                </configuration>
-            </plugin>
-        </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.twdata.maven</groupId>
-                    <artifactId>cargo-maven2-plugin</artifactId>
-                    <version>1.0-beta-2-db2</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>jira-5.0</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>5.0</jira.version>
-                <jira.data.version>5.0</jira.data.version>
-                <jira.test-lib.version>5.0</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jira-5.1</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>5.1</jira.version>
-                <jira.data.version>5.1</jira.data.version>
-                <jira.test-lib.version>5.1</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jira-5.2</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>5.2</jira.version>
-                <jira.data.version>5.2</jira.data.version>
-                <jira.test-lib.version>5.2</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jira-6.0</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <properties>
-                <jira.version>6.0-SNAPSHOT</jira.version>
-                <jira.data.version>${jira.version}</jira.data.version>
-                <jira.test-lib.version>${jira.version}</jira.test-lib.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>releaseProfile</id>
-            <properties>
-                <maven.test.skip>true</maven.test.skip>
-            </properties>
-        </profile>
-    </profiles>
 </project>
